--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <section class="container main-box-one">
             <div class="main-box-one-texts">
                 <h1 class="main-box-one-titlle" >Encontre o seu lugar!</h1>
-                <p>F4Life é uma empresa de aluguéis de repúblicas para pessoas universitárias</p>
+                <p class="main-box-one-p">F4Life é uma empresa de aluguéis de repúblicas para pessoas universitárias</p>
                 <button class="main-box-one-button">Saiba mais</button>
             </div>
             <img class="main-box-one-img" src="img/imgSection1.png" alt="">
@@ -49,19 +49,31 @@
             </div>
             <div class="container-mobile">
                 <div class="box-profile">
-                    <img src="img/Avatar1.png" alt="">
-                    <p class="name-cliente">Astrogildo</p>
-                    <p>"A F4Life prestou um serviço inrivel"</p>
+                    <img class="photo-profile" src="img/Avatar1.png" alt="">
+                    <div class="teste2">
+                        <p class="name-cliente">Astrogildo</p> 
+                    </div>
+                    <div class="opnion-cliente">
+                        <p>"A F4Life prestou um serviço inrivel"</p>
+                    </div>
                 </div>
                 <div class="box-profile">
-                    <img src="img/Avatar2.png" alt="">
-                    <p class="name-cliente">Creuza</p>
-                    <p>"Serviço de qualidade com um preço justo"</p>
+                    <img class="photo-profile" src="img/Avatar2.png" alt="">
+                    <div class="teste2">
+                        <p class="name-cliente">Creuza</p>
+                    </div>
+                    <div class="opnion-cliente">
+                        <p class="opnion-cliente">"Serviço de qualidade com um preço justo"</p>
+                    </div>
                 </div>
                 <div class="box-profile">
-                    <img src="img/Avatar3.png" alt="">
-                    <p class="name-cliente">Jurema</p>
-                    <p>"Já tive experiencai com outras empresas, mas a F2Life, sem duvidas tem o melhor serviço"</p>
+                    <img class="photo-profile" src="img/Avatar3.png" alt="">
+                    <div class="teste2">
+                        <p class="name-cliente">Jurema</p>
+                    </div>
+                    <div class="opnion-cliente">
+                        <p>"Já tive experiencai com outras empresas, mas a F2Life, sem duvidas tem o melhor serviço"</p>
+                    </div>
                 </div>
             </div>
         </section>
