--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/footer.css">
+    <script type="text/javascript" src="script.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 </head>
 <body>
     <header class="container">
@@ -80,12 +82,12 @@
         <section class="container main-section-three">
             <div class="main-section-three-texts">
                 <h2 class="main-section-three-titlle">Entre em contato</h2>
-                <form action="" method="post">
+                <form action="#" method="post">
                     <label class="form-text" for="email">E-mail</label>
                     <input class="form-box" type="email" id="email">
                     <label class="form-text" for="msg">Mensagem</label>
-                    <textarea class="text-box" name="mensagem" id="msg" cols="30" rows="10"></textarea>
-                    <button class="form-button" type="submit">Enviar</button>
+                    <textarea class="text-box" name="message" id="message" cols="30" rows="10"></textarea>
+                    <button class="form-button" type="button" onclick="sendForms()">Enviar</button>
                 </form>
             </div>
             <img class="main-section-three-img" src="img/imgSection3.png" alt="">
