--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
 </head>
 <body>
     <header class="container">
-        <img src="img/logo.png" alt="">
-        <nav class="teste">
-            <a class="header-nav-link" href="#">Início</a>
-            <a class="header-nav-link" href="#">Quem somos?</a>
-            <a class="header-nav-link" href="#">Entre em contato</a>
+        <img src="img/logo.png" alt="Logo F4LIFE">
+        <nav>
+            <ul class="header-nav-ul">
+                <li class="header-nav-link"><a href="#">Início</a></li>
+                <li class="header-nav-link"><a href="#">Quem somos?</a></li>
+                <li class="header-nav-link"><a href="#">Entre em contato</a></li>
+            </ul>
         </nav>
     </header>
-    <main class="">
+    <main>
         <section class="container main-box-one">
             <div class="main-box-one-texts">
                 <h1 class="main-box-one-titlle" >Encontre o seu lugar!</h1>
