--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <header class="container">
-        <img src="img/logo.png" alt="Logo F4LIFE">
+        <img class="logo" src="img/logo.png" alt="Logo F4LIFE">
         <nav>
             <ul class="header-nav-ul">
                 <li class="header-nav-link"><a href="#">Início</a></li>
