--- a/index.html
+++ b/index.html
@@ -72,17 +72,31 @@
         </section>
 
         <section class="container main-section-contact">
+
             <div class="main-section-three-texts">
                 <h2 class="main-section-three-titlle">Entre em contato</h2>
+
                 <form action="#" method="post">
+
+                    <label class="label-contact" for="name">Nome</label>
+                    <input class="form-box" name="name" type="text" id="nameid" placeholder="Maria José ..."> 
+
+                    <label class="label-contact"  for="telephone">Telefone</label>
+                    <input class="form-box" name="telephone" type="tel" id="telephoneid" placeholder="(xx)xx-xx-xx-xx">
+
                     <label class="label-contact" for="email">E-mail</label>
-                    <input class="form-box" type="email" id="email">
-                    <label class="label-contact" for="msg">Mensagem</label>
-                    <textarea class="text-box" name="message" id="message" cols="30" rows="10"></textarea>
+                    <input class="form-box" name="email" type="email" id="emailid" placeholder="mariajose@gmail.com">
+
+                    <label class="label-contact" for="message">Mensagem</label>
+                    <textarea class="text-box" name="message" id="messageid" placeholder="Digite aqui ..." cols="30" rows="10"></textarea>
+
                     <button class="form-button" type="button" onclick="sendForms()">Enviar</button>
                 </form>
+
             </div>
+
             <img class="main-section-three-img" src="img/imgSection3.png" alt="">
+
         </section>
         <footer>
             <img class="footer-logo" src="img/logo.png" alt="">
