primeiro teste pwa

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="assets/css/respnsive.css">
 
     <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="service-worker.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 </head>
 <body>
@@ -99,11 +100,11 @@
 
         </section>
         <footer>
-            <img class="footer-logo" src="img/logo.png" alt="">
+            <img class="footer-logo" src="assets/img/logo.png" alt="">
             <ul class="social-icons">
-                <li class="icons"><a href=""><img src="assets/img/facebook.png" alt=""></a></li>
-                <li class="icons"><a href=""><img src="assets/img/linkedin.png" alt=""></a></li>
-                <li class="icons"><a href=""><img src="assets/img/Twitter.png" alt=""></a></li>
+                <li class="icons"><a href="#"><img src="assets/img/facebook.png" alt=""></a></li>
+                <li class="icons"><a href="#"><img src="assets/img/linkedin.png" alt=""></a></li>
+                <li class="icons"><a href="#"><img src="assets/img/Twitter.png" alt=""></a></li>
             </ul>
             <p class="footer-paragraph">Todos os direitos reservados &copy; 2023 F4LIFE</p>
         </footer>
