--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <script type="text/javascript" src="script.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-    <script type="text/javascript" src="service-worker.js"></script>
+    <script type="text/javascript" src="assets/js/service-worker.js"></script>
     <link rel="manifest" href="manifest.json">
     
 </head>
