--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         let newWorker;
 
         if ('serviceWorker' in navigator) {
-          navigator.serviceWorker.register('/assets/js/service-worker.js').then(reg => {
+          navigator.serviceWorker.register('/service-worker.js').then(reg => {
             reg.addEventListener('updatefound', () => {
               // A wild service worker has appeared in reg.installing!
               newWorker = reg.installing;
