nav-bar suspenso

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <img class="logo" src="assets/img/logo.png" alt="Logo F4LIFE">
         <nav>
             <ul class="header-nav-ul">
-                <li class="header-nav-link"><a href="#">Início</a></li>
-                <li class="header-nav-link"><a href="#">Quem somos?</a></li>
-                <li class="header-nav-link"><a href="#">Entre em contato</a></li>
+                <li class="header-nav-link"><a href="#">Home</a></li>
+                <li class="header-nav-link"><a href="#">Login</a></li>
+                <li class="header-nav-link"><a href="#">Tire suas duvidas</a></li>
             </ul>
         </nav>
     </header>
