--- a/login.html
+++ b/login.html
@@ -9,11 +9,22 @@
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/login.css">
+
+    <link rel="stylesheet" href="assets/js/script.js">
 </head>
 
 <body>
         <header class="l-header">
             <img class="logo" src="assets/img/logo.png" alt="">
+            <nav class="dropdown">
+                <button onclick="myFunction()" class="dropbtn"><img  class="img-btn" src="assets/img/cardapio.png" alt=""></button>
+                <ul id="myDropdown" class="dropdown-content">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Login</a></li>
+                    <li><a href="#">Sobre nós</a></li>
+                    <li><a href="#">Tire suas dúvidas</a></li>
+                </ul>
+            </nav>
         </header>
 
         <main class="l-main">
@@ -39,5 +50,24 @@
         <footer class="l-footer">
             <h1>footer</h1>
         </footer>
+
+        <script>
+            function myFunction() {
+                document.getElementById("myDropdown").classList.toggle("show");
+            }
+
+            window.onclick = function(event) {
+                if (!event.target.matches('.dropbtn')) {
+                    var dropdowns = document.getElementsByClassName("dropdown-content");
+                    var i;
+                    for (i = 0; i < dropdowns.length; i++) {
+                        var openDropdown = dropdowns[i];
+                        if (openDropdown.classList.contains('show')) {
+                            openDropdown.classList.remove('show');
+                        }
+                    }
+                }
+            }
+        </script>
 </body>
 </html>
