--- a/login.html
+++ b/login.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/login.css">
 
-    <link rel="stylesheet" href="assets/js/script.js">
 </head>
 
 <body>
@@ -19,8 +18,8 @@
             <nav class="dropdown">
                 <button onclick="myFunction()" class="dropbtn"><img  class="img-btn" src="assets/img/cardapio.png" alt=""></button>
                 <ul id="myDropdown" class="dropdown-content">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Login</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="login.html">Login</a></li>
                     <li><a href="#">Sobre nós</a></li>
                     <li><a href="#">Tire suas dúvidas</a></li>
                 </ul>
@@ -38,6 +37,7 @@
 
                 <label class="label-1" for="passWord">Senha</label>
                 <input class="input" type="text" name="passWord" id="passWordId">
+                <a href="register.html">Create account</a>
 
                 <button class="button-login">
                     Entrar
